--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/furamaresortmanagementapp?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=12345
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+#google.clientId = 631867203803-gfnbuj33563dmuorhmfm6cv2prqasulq.apps.googleusercontent.com
 
