--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,31 @@ repositories {
 }
 
 dependencies {
+
+
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    using Http security
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+
+
 // using security
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '6.1.2'
+
+
+//    DI using WebSecurityConfigurerAdapter
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.3.0.RELEASE'
+
 
 //	using JWT
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
