--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/furamaresortmanagementapp?crea
 spring.datasource.username=root
 spring.datasource.password=12345
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #google.clientId = 631867203803-gfnbuj33563dmuorhmfm6cv2prqasulq.apps.googleusercontent.com
 
